# sglang

./: .gitignore  UnifiedRadixTree-Accuracy-Skill.md  hicache_refactor_test_report.md  light-router.md  pd-deocde-hicache.md  qwen35-tbo.md  rust_unified_radix_tree_draft.md  rust_unified_radix_tree_plan.md  support-mamba-offload.patch  tmp.patch  tree.md  unified_tree_l3_design.md  unified_tree_v4_l2_support.md
.github/workflows/: _pr-test-check-changes.yml  pr-states.yml  pr-test-extra.yml  pr-test.yml
benchmark/hicache/: bench_multiturn.py
benchmark/multi_turn_chat/: bench_longctx_tree_probe.py
benchmark/router/: run_two_pool_pd_router_validation.sh
docker/: Dockerfile
docs/developer_guide/: hicache_state_machine.md
docs/rlcr/: decode_l2_only_cache_iter1_plan.md
experimental/sgl-router/src/config/: mod.rs  types.rs
experimental/sgl-router/src/discovery/: static_urls.rs
experimental/sgl-router/src/policies/: cache_aware_zmq.rs  factory.rs  load_based.rs  mod.rs  policy_chain.rs  registry.rs  sticky_session.rs
experimental/sgl-router/src/server/: app_context.rs  header_utils.rs
experimental/sgl-router/src/tokenizer/: mod.rs
experimental/sgl-router/src/workers/: manager.rs
experimental/sgl-router/tests/e2e/: conftest.py
experimental/sgl-router/tests/proxy/: chat_routing.rs  failover.rs  graceful_shutdown.rs  header_forwarding.rs  main.rs  (+5 more)
python/: pyproject.toml
python/sglang/: bench_serving.py
python/sglang/jit_kernel/: flash_attention_v3.py  hisparse.py
python/sglang/srt/: environ.py  server_args.py
python/sglang/test/: kl_test_utils.py  test_apertus_model.py  test_dependency_versions.py  test_multi_tokenizer_mixin.py  test_server_args.py
rust/sglang-light-router/: Cargo.toml
rust/sglang-light-router/src/: lib.rs  main.rs  router.rs
rust/sglang-light-router/tests/: light_router_tests.rs
rust/sglang-mem-cache/src/: deferred_action.rs  error.rs  radix_cache.rs  radix_cache_wrapper.rs  tree_node_lru.rs  tree_node_pool.rs
scripts/ci/: test_update_est_time.py  update_est_time.py
scripts/ci/utils/: compute_partitions.py  slash_command_handler.py  test_check_changes_workflow.py  test_slash_command_handler.py
scripts/playground/: download_and_process_loogle_wiki_qa.py  download_longbench_v2.py  filter_longbench_v2.py  plot_hisparse_hit_rate.py  run_longbench_v2_long_output_openai.py
test/manual/: test_two_batch_overlap.py
test/registered/4-gpu-models/: test_qwen35_two_batch_overlap.py  test_qwen3_next_models.py  test_qwen3_next_models_mtp.py
test/registered/hicache/: test_hicache_file_backend_v2_unit.py  test_hicache_storage_3fs_backend.py  test_mamba_pool_host_unit.py
test/registered/models/: test_qwen3_next_models_pcg.py
test/registered/radix_cache/: test_hybrid_mamba_equivalence_unit.py  test_hybrid_radix_cache.py  test_hybrid_swa_equivalence_unit.py  test_unified_radix_hicache_kl.py
(+137 files in other folders)
